# afm

./: .gitignore  LICENSE.txt  config.py  main.py  make_information_integral.py  pyproject.toml  requirements.txt  setup.py  test
.github/workflows/: codeql-analysis.yml
afm/: data_io.py  ibw_formatting.py  math_funcs.py  misc.py  ml_tools.py  sim.py  visco.py
afm/afm_fd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
afm_fd.egg-info/: SOURCES.txt  top_level.txt
src/: data_io.py
utils/: data_io.py  misc.py  visco.py
