[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel", "numpy~=1.22.3", "pandas~=1.4.3", "matplotlib~=3.5.2", "scipy~=1.7.3",
"igor~=0.3"]
build-backend = "setuptools.build_meta"